# gini

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cobertura.xml  code_review_part1.md  code_review_part2.md  coverage.json  github-copilot-freedom.ts  text.txt
.github/: BRANCHING_STRATEGY.md  CODE_REVIEW_GUIDELINES.md
.github/.workflows/: README.md  ci.yml  deploy.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md  security_vulnerability.md
.github/PULL_REQUEST_TEMPLATE/: hotfix_pr_template.md  standard_pr_template.md
.github/workflows/: rust-coverage.yml
crates/gini/: Cargo.toml
crates/gini-core/: Cargo.toml
crates/gini-core/src/: lib.rs
crates/gini-core/src/event/: dispatcher.rs  error.rs  manager.rs  mod.rs  types.rs
crates/gini-core/src/event/tests/: dispatcher_tests.rs  error_tests.rs  manager_tests.rs  mod.rs  types_tests.rs
crates/gini-core/src/kernel/: bootstrap.rs  component.rs  error.rs  mod.rs
crates/gini-core/src/kernel/tests/: bootstrap_tests.rs  mod.rs
crates/gini-core/src/plugin_system/: adapter.rs  conflict.rs  dependency.rs  error.rs  loader.rs  manager.rs  manifest.rs  mod.rs  registry.rs  traits.rs  version.rs
crates/gini-core/src/plugin_system/tests/: adapter_tests.rs  conflict_tests.rs  dependency_tests.rs  ffi_failure_tests.rs  loading_tests.rs  manager_tests.rs  manifest_tests.rs  mod.rs  preflight_tests.rs  registry_tests.rs  traits_tests.rs
crates/gini-core/src/stage_manager/: context.rs  core_stages.rs  dependency.rs  dry_run.rs  error.rs  manager.rs  mod.rs  pipeline.rs  registry.rs
crates/gini-core/src/stage_manager/tests/: context_tests.rs  dependency_tests.rs  dry_run_tests.rs  mod.rs  pipeline_tests.rs  registry_tests.rs
crates/gini-core/src/storage/: config.rs  error.rs  local.rs  manager.rs  mod.rs  provider.rs
crates/gini-core/src/storage/tests/: config_tests.rs  local_tests.rs  mod.rs
crates/gini-core/src/tests/integration/: common.rs  config_tests.rs  event_tests.rs  mod.rs  stage_tests.rs  storage_tests.rs  ui_tests.rs
crates/gini-core/src/tests/integration/plugins/: compatibility.rs  dependency.rs  lifecycle.rs  loading.rs  misc.rs  mod.rs  registry.rs  stages.rs  storage.rs
crates/gini-core/src/ui_bridge/: error.rs  manager.rs  mod.rs  unified_interface.rs
crates/gini-core/src/ui_bridge/tests/: messages_tests.rs  mod.rs
crates/gini-core/src/utils/: fs.rs  mod.rs
crates/gini-core/src/utils/tests/: fs_tests.rs  mod.rs  path_tests.rs
crates/gini-core/tests/test_plugins/failing_ffi/init_panic_plugin/: Cargo.toml
crates/gini-core/tests/test_plugins/failing_ffi/init_panic_plugin/src/: lib.rs
crates/gini-core/tests/test_plugins/failing_ffi/invalid_vtable_plugin/: Cargo.toml
crates/gini-core/tests/test_plugins/failing_ffi/invalid_vtable_plugin/src/: lib.rs
crates/gini-core/tests/test_plugins/failing_ffi/missing_symbol_plugin/: Cargo.toml
crates/gini-core/tests/test_plugins/failing_ffi/missing_symbol_plugin/src/: lib.rs
crates/gini/src/: cli.rs  main.rs
crates/gini/tests/: cli.rs
docs/: README.md  architecture.md  component_relationships.md  core_rpc_plan.md  error_handling.md  implementation_progress.md  implementation_status.md  kernel-system.md  plugin-system.md  plugin_development_guide.md  plugin_system_architecture_summary.md  plugin_system_developer_guide.md  plugin_system_error_handling_analysis.md  readme.asciidoc  readme.md  resource_conflict_management_design.md  setup-guide.md  storage-system.md  testing-guide.md  testing_strategy.md  tracker.txt
docs/file_reviews/: gini_core_event_dispatcher_rs.md  gini_core_event_error_rs.md  gini_core_event_manager_rs.md  gini_core_event_mod_rs.md  gini_core_event_types_rs.md  gini_core_kernel_bootstrap_rs.md  gini_core_kernel_component_rs.md  gini_core_kernel_constants_rs.md  gini_core_kernel_error_rs.md  gini_core_kernel_mod_rs.md  gini_core_lib_rs.md  gini_core_plugin_system_adapter_rs.md  gini_core_plugin_system_conflict_rs.md  gini_core_plugin_system_dependency_rs.md  gini_core_plugin_system_error_rs.md  gini_core_plugin_system_loader_rs.md  gini_core_plugin_system_manager_rs.md  gini_core_plugin_system_manifest_rs.md  gini_core_plugin_system_mod_rs.md  gini_core_plugin_system_registry_rs.md  gini_core_plugin_system_traits_rs.md  gini_core_plugin_system_version_rs.md  gini_core_stage_manager_context_rs.md  gini_core_stage_manager_core_stages_rs.md  gini_core_stage_manager_dependency_rs.md  gini_core_stage_manager_dry_run_rs.md  gini_core_stage_manager_error_rs.md  gini_core_stage_manager_manager_rs.md  gini_core_stage_manager_mod_rs.md  gini_core_stage_manager_pipeline_rs.md  gini_core_stage_manager_registry_rs.md  gini_core_stage_manager_requirement_rs.md  gini_core_storage_config_rs.md  gini_core_storage_error_rs.md  gini_core_storage_local_rs.md  gini_core_storage_manager_rs.md  gini_core_storage_mod_rs.md  gini_core_storage_provider_rs.md  gini_core_ui_bridge_error_rs.md  gini_core_ui_bridge_messages_rs.md  (+10 more)
docs/kernel/: design.md
docs/module_summaries/: event_system_summary.md  kernel_system_summary.md  plugin_system_summary.md  stage_manager_summary.md  storage_system_summary.md  ui_bridge_system_summary.md  utils_system_summary.md
docs/old/: README.md  refactoring_plan.md
docs/old_2/: api-reference.md  contributing.md  documentation_plan.md  event-system.md  plugin-creation-guide.md  stage-manager.md  transform_markdown.py  ui-bridge.md  vm-setup-workflow.md
docs/plugin_system/: dependencies.md
docs/ui/: ui-styles.asciidoc
html/: coverage.json  index.html
plugins/core-cli-context-test/: Cargo.toml
plugins/core-environment-check/: Cargo.toml
plugins/core-environment-check/docs/: kvm.md  libvirt.md  lvm.md  qemu.md  vfio.md
plugins/core-environment-check/src/: lib.rs
plugins/core-logging/: Cargo.toml
plugins/core-logging/src/: lib.rs
plugins/core-rpc/: Cargo.toml
plugins/core-rpc/src/: ipc_linux.rs  lib.rs  rpc_wrapper.rs  settings.rs
src/: main.rs
src/event/: dispatcher.rs  mod.rs  types.rs
src/kernel/: bootstrap.rs  constants.rs  error.rs  mod.rs
(+122 files in other folders)
