[package]
name = "gini-core"
version.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
authors.workspace = true # Inherit from workspace
# description = "Core library for the Gini plugin engine"
# license.workspace = true
# repository.workspace = true

[lib]
name = "gini_core"
path = "src/lib.rs"

[dependencies]
# Dependencies moved from the original gini crate
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "sync"] }
# Or use workspace dependency: tokio = { workspace = true }
async-trait = "0.1"
# Or use workspace dependency: async-trait = { workspace = true }
libloading = "0.8"
tokio-stream = "0.1"
# Or use workspace dependency: tokio-stream = { workspace = true }
semver = "1.0.26"
# Or use workspace dependency: semver = { workspace = true }
thiserror = "2.0.12" # Assuming this is used by core error types
tempfile = "3.10"
# Or use workspace dependency: thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] } # For manifest parsing
serde_json = "1.0" # For manifest parsing

[dev-dependencies]
# Tests moved here require tempfile
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] } # Add tokio for async tests
tempfile = "3.10"
# Or use workspace dependency: tempfile = { workspace = true }
# serde_json moved to main dependencies