[package]
name = "gini-core"
version.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
authors.workspace = true # Inherit from workspace
# description = "Core library for the Gini plugin engine"
# license.workspace = true
# repository.workspace = true

[lib]
name = "gini_core"
path = "src/lib.rs"

[features]
default = ["toml-config", "yaml-config"] # Add config features to default
yaml-config = ["serde_yaml"]
toml-config = ["toml"]

[dependencies]
# Dependencies moved from the original gini crate
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "sync"] }
# Or use workspace dependency: tokio = { workspace = true }
async-trait = "0.1"
# Or use workspace dependency: async-trait = { workspace = true }
libloading = "0.8"
tokio-stream = "0.1"
# Or use workspace dependency: tokio-stream = { workspace = true }
semver = { version = "1.0.26", features = ["serde"] }
# Or use workspace dependency: semver = { workspace = true }
thiserror = "2.0.12" # Assuming this is used by core error types
tempfile = "3.10"
# Or use workspace dependency: thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] } # For manifest parsing
serde_json = "1.0" # For manifest parsing
log = "0.4" # For logging facade

# Optional dependencies for configuration formats
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
# Tests moved here require tempfile
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] } # Add tokio for async tests
tempfile = "3.10"
futures = "0.3" # Added for block_on in tests
rand = "0.8" # Added for test utilities
# Or use workspace dependency: tempfile = { workspace = true }
# serde_json moved to main dependencies