[package]
name = "core-logging"
version = "0.1.0"
edition = "2021"
authors = ["Gini Project Contributors"]
description = "Gini core plugin for setting up application logging."

[lib]
crate-type = ["cdylib", "rlib"] # Compile as dynamic library AND rust library

[dependencies]
gini-core = { path = "../../crates/gini-core" }
log = "0.4"
env_logger = "0.11"