[package]
name = "core-logging"
version = "0.1.0"
edition = "2021"
authors = ["Gini Project Contributors"]
description = "Gini core plugin for setting up application logging."

[lib]
crate-type = ["cdylib", "rlib"] # Compile as dynamic library AND rust library

[dependencies]
gini-core = { path = "../../crates/gini-core" }
log = "0.4" # For log facade, bridged by tracing-log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "registry"] }
tracing-log = "0.2" # Bridges log crate to tracing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For working with JSON values, helpful for ConfigData conversion
toml = "0.8" # For parsing TOML configuration files